style search filter for mobile, fix horizontal scrolling

--- a/app/assets/stylesheets/partials/_base.css.sass
+++ b/app/assets/stylesheets/partials/_base.css.sass
@@ -38,6 +38,8 @@ $search-item-color: #f5f5f5
 $search-filter-border-dark: #a6a7a6
 $search-container-border-top: lighten($search-background-color, 10%)
 
+$border-light: lighten($search-filter-border-dark, 10%)
+
 $head-of-alfred-mueller-tab-slider-border: #dddddd
 
 // Mixins ---------------------------------------------------------------
